<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center" >

    <ToggleButton
        android:id="@+id/toggleButtonRightSign"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_alignParentRight="true"
        android:layout_marginRight="10dp"
        android:layout_marginTop="5dp"
        android:background="@drawable/selector_right_sign"
        android:text=""
        android:textOff=""
        android:textOn="" />

    <Button
        android:id="@+id/scan"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:background="@drawable/btscan"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_marginRight="10dp"
        android:text="" />

    <ToggleButton
        android:id="@+id/toggleButtonLeftSign"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="5dp"
        android:background="@drawable/selector_left_sign"
        android:text=""
        android:textOff=""
        android:textOn="" />

    <ToggleButton
        android:id="@+id/toggleButtonHighLights"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="5dp"
        android:layout_toLeftOf="@+id/toggleButtonRightSign"
        android:background="@drawable/selector_high_lights"
        android:text=""
        android:textOff=""
        android:textOn="" />
    
    <ToggleButton
        android:id="@+id/toggleButtonLantern"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="5dp"
        android:layout_toLeftOf="@+id/toggleButtonHighLights"
        android:background="@drawable/selector_lantern"
        android:text=""
        android:textOff=""
        android:textOn=""
        android:visibility="invisible"
         />

    <ToggleButton
        android:id="@+id/toggleButtonAlert"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="7dp"
        android:layout_toRightOf="@+id/toggleButtonLeftSign"
        android:background="@drawable/selector_alert"
        android:text=""
        android:textOff=""
        android:textOn="" />

    <TextView
        android:id="@+id/label_stand_position"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:text="@string/stand_position"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@color/light_red" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/layout_calibrated_statistics"
        android:orientation="horizontal" >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:orientation="vertical" >
     
            <TextView
                android:id="@+id/label_left"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:text="left"
                android:textAppearance="?android:attr/textAppearanceMedium" /> 
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:orientation="vertical" >

            <jnuneslab.com.remotecar.draw.gauge.GaugeRotation
                android:id="@+id/gauge_tilt_calibrated"
                android:layout_width="wrap_content"
                android:layout_height="100dp"
                android:layout_gravity="center" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:orientation="vertical" >


            <TextView
                android:id="@+id/label_right"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="right"
                android:textAppearance="?android:attr/textAppearanceMedium" />
       
        </LinearLayout>
    </LinearLayout>

    <RelativeLayout
        android:id="@+id/layout_calibrated_statistics"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true" >

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true" >

            <TableLayout
                android:id="@+id/table_calibrated_statistics_left"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" >

                <TableRow
                    android:id="@+id/table_calibrated_statistics_left_row_0"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:padding="2dip" >

                    <RelativeLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="20dp"
                        android:layout_weight="1" >

                        <TextView
                            android:id="@+id/label_x_axis_calibrated"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentLeft="true"
                            android:text="@string/label_x_axis"
                            android:textAppearance="?android:attr/textAppearanceMedium" />

                        <TextView
                            android:id="@+id/value_x_axis_calibrated"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_toRightOf="@+id/label_x_axis_calibrated"
                            android:text="@string/value_default"
                            android:textAppearance="?android:attr/textAppearanceMedium" />
                    </RelativeLayout>

                    <RelativeLayout
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1" >

                        <TextView
                            android:id="@+id/label_y_axis_calibrated"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentLeft="true"
                            android:text="@string/label_y_axis"
                            android:textAppearance="?android:attr/textAppearanceMedium" />

                        <TextView
                            android:id="@+id/value_y_axis_calibrated"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_toRightOf="@+id/label_y_axis_calibrated"
                            android:text="@string/value_default"
                            android:textAppearance="?android:attr/textAppearanceMedium" />
                    </RelativeLayout>

                    <RelativeLayout
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="20dp"
                        android:layout_weight="1" >

                        <TextView
                            android:id="@+id/label_z_axis_calibrated"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentLeft="true"
                            android:text="@string/label_z_axis"
                            android:textAppearance="?android:attr/textAppearanceMedium" />

                        <TextView
                            android:id="@+id/value_z_axis_calibrated"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_toRightOf="@+id/label_z_axis_calibrated"
                            android:text="@string/value_default"
                            android:textAppearance="?android:attr/textAppearanceMedium" />
                    </RelativeLayout>
                </TableRow>
            </TableLayout>
        </RelativeLayout>
    </RelativeLayout>

</RelativeLayout>